implementacion final en main.py

--- a/schnorr-sig/schnorr.ipynb
+++ b/schnorr-sig/schnorr.ipynb
@@ -178,12 +178,15 @@
    "source": [
     "import create_keypair as ckp\n",
     "import schnorr_lib as sl\n",
+    "import os\n",
     "\n",
     "n_keys = int(input(\"Insert the number of keys to be generated:\"))\n",
     "users = ckp.create_keypair(n_keys)[\"users\"]\n",
     "\n",
-    "M = input(\"Insert the message to sign:\")\n",
-    "M = sl.sha256(M.encode())\n",
+    "# M = input(\"Insert the message to sign:\")\n",
+    "# M = sl.sha256(M.encode())\n",
+    "file = \"./test/test.pdf\"\n",
+    "BLOCK_SIZE =  os.path.getsize(file) \n",
     "\n",
     "sig, X = sl.schnorr_musig2_sign(M, users)\n",
     "\n",
