Se adapta el leer y encriptar el pdf en la notebook de schnorr

--- a/schnorr-sig/schnorr.ipynb
+++ b/schnorr-sig/schnorr.ipynb
@@ -163,15 +163,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Aggregated key = 3d6db5306839b9cad9e60bcb74277382feead72c04db62ebf5a800c7bedd66ba\n",
-      "Signature = ff26003ac6ad7c3b364be8810502febbdbff821545df4a9943a5a92b7432177ac845f24825b879c482d1f2014291b99f3aae542ce9ff65da96436c3b66766c1b\n"
+      "Aggregated key = 0cfcfbe246dd6d926e2696d7758385a3bfae0dcbd98d8b78de6ea2782ed77f8e\n",
+      "Signature = b519b79a5fd98a572587ea3ef56e5fdf163d37a2e87100c5ae3709dccf81c6c97d08a1b2598fdc5c0568f80e4764be96a123b79ad8bbc7904bfb23357f6e59e6\n"
      ]
     }
    ],
@@ -179,14 +179,24 @@
     "import create_keypair as ckp\n",
     "import schnorr_lib as sl\n",
     "import os\n",
+    "# from hashlib import sha256\n",
+    "\n",
+    "def hashPDF(file, BLOCK_SIZE):\n",
+    "    # hash=sha256()\n",
+    "    with open(file, 'rb') as f: # Open the file to read it's bytes\n",
+    "        fb = f.read(BLOCK_SIZE) # Read from the file. Take in the amount declared above\n",
+    "        M = sl.sha256(fb)\n",
+    "    return M\n",
     "\n",
     "n_keys = int(input(\"Insert the number of keys to be generated:\"))\n",
+    "# n_keys = 2\n",
     "users = ckp.create_keypair(n_keys)[\"users\"]\n",
     "\n",
     "# M = input(\"Insert the message to sign:\")\n",
     "# M = sl.sha256(M.encode())\n",
-    "file = \"./test/test.pdf\"\n",
-    "BLOCK_SIZE =  os.path.getsize(file) \n",
+    "file = \"C:/Users/guzma/OneDrive/Documents/TEC/S6/MA2006/reto/test.pdf\"\n",
+    "size = os.path.getsize(file) \n",
+    "M = hashPDF(file, size)\n",
     "\n",
     "sig, X = sl.schnorr_musig2_sign(M, users)\n",
     "\n",
@@ -207,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -221,8 +231,9 @@
    "source": [
     "import schnorr_lib as sl\n",
     "\n",
-    "M = input(\"Insert the message to verify:\")\n",
-    "M = sl.sha256(M.encode())\n",
+    "# M = input(\"Insert the message to verify:\")\n",
+    "# M = sl.sha256(M.encode())\n",
+    "M = hashPDF(file, size)\n",
     "\n",
     "pubkey = input(\"Insert the public key (or the aggregated key if MuSig was used):\")\n",
     "pubkey_bytes = bytes.fromhex(pubkey)\n",
