Se finalizaron los cambios en la notebook de schnorr

--- a/schnorr-sig/schnorr.ipynb
+++ b/schnorr-sig/schnorr.ipynb
@@ -24,7 +24,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hashPDF(file, BLOCK_SIZE):\n",
+    "    # hash=sha256()\n",
+    "    with open(file, 'rb') as f: # Open the file to read it's bytes\n",
+    "        fb = f.read(BLOCK_SIZE) # Read from the file. Take in the amount declared above\n",
+    "        M = sl.sha256(fb)\n",
+    "    return M\n",
+    "file = \"C:/Users/guzma/OneDrive/Documents/TEC/S6/MA2006/reto/test.pdf\"\n",
+    "size = os.path.getsize(file) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -34,13 +50,13 @@
     {
      "data": {
       "text/plain": [
-       "[{'privateKey': '4227ff939da700e659bd21e7d4a24353645e4c754b1f9b1a54716cd4face27a5',\n",
-       "  'publicKey': 'a730c4ce1cf1d59c43a11a9445721d976380bf4e78fd43d7ecb19fa9935b6e8a'},\n",
-       " {'privateKey': '2edff07ef38b6bdede523c9c0702058f4631e6bac275e0abe91e758e02c1f279',\n",
-       "  'publicKey': '6de1b6b1ab789afc282540bcd0296104406a746f48afe0005a2c060152aa3d38'}]"
+       "[{'privateKey': 'cb203c0a070b40dbbb57be96f96305ec177d2c6613769762307f80948e1b7a74',\n",
+       "  'publicKey': '019fbce66971c02530b7f1f84380c59ce375a57b6eaba9179be303cab6e95b9e'},\n",
+       " {'privateKey': '422a908896e3e1a14ae5aca1f0f44e3a9c5f2461ad1207512777caf73f1b8911',\n",
+       "  'publicKey': 'b490aa6768c98cc1cf891c716bb3573e7c971b987584a8a4958294d81c721b40'}]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,15 +85,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PublicKey = 68a8e009f2cf30646c63a961898c08a4b0b4744d546901add74d5d54e5a358b5\n",
-      "Signature = 6dc13d95b11f46c9a37dfdf51b88d3f5c323e3c25638a09805ec953e09d8409005e973986e051bac847419c326fc0d32a3bbe2b7876df600cd642c8e9d9e19f5\n"
+      "PublicKey = 5cca9b527270eafd9309001c26acb24e9357bcb5df2f96960009b389606088e7\n",
+      "Signature = 186cbef55f772dd8192bf82e286dd8276c2e99b67dacb159ab0f10fbaa1072715092ecca345171bb8d664e75c5c4b59e1c2d0db3eba87a3022e83d6f74c2cc3a\n"
      ]
     }
    ],
@@ -87,8 +103,9 @@
     "\n",
     "user = ckp.create_keypair(1)[\"users\"]\n",
     "\n",
-    "M = input(\"Insert the message to sign:\")\n",
-    "M = sl.sha256(M.encode())\n",
+    "# M = input(\"Insert the message to sign:\")\n",
+    "# M = sl.sha256(M.encode())\n",
+    "M = hashPDF(file, size)\n",
     "\n",
     "sig = sl.schnorr_sign(M, user[0][\"privateKey\"])\n",
     "\n",
@@ -114,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {
     "scrolled": true
    },
@@ -123,8 +140,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Aggregated key = c71d543b34c3c2e6d7229b9f10730eee956cc56a3173213645415bcd216480bf\n",
-      "Signature = b7ab2d748c09c6ddcba0ca16d61656b2b121c29150de42ccc2b050cb9f814561ddf494ef8a988fe1244d9cda3c8a319a734bd5085290213e83224b980dd6c680\n"
+      "Aggregated key = c0a1249e920d8b2f51ade69acd3d862f4755bd20cc08f474274fad8cf55fdeea\n",
+      "Signature = d12daa5527ac9ee1735c72e419a5ffa6182c92ea2c8efe8ebd75c5df504093c4a1d21eb7a2d96e16bb043a2bb24e397f91fa5358169ce3e890f44e1907a67de1\n"
      ]
     }
    ],
@@ -135,8 +152,9 @@
     "n_keys = int(input(\"Insert the number of keys to be generated:\"))\n",
     "users = ckp.create_keypair(n_keys)[\"users\"]\n",
     "\n",
-    "M = input(\"Insert the message to sign:\")\n",
-    "M = sl.sha256(M.encode())\n",
+    "# M = input(\"Insert the message to sign:\")\n",
+    "# M = sl.sha256(M.encode())\n",
+    "M = hashPDF(file, size)\n",
     "\n",
     "sig, X = sl.schnorr_musig_sign(M, users)\n",
     "\n",
@@ -163,15 +181,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Aggregated key = 0cfcfbe246dd6d926e2696d7758385a3bfae0dcbd98d8b78de6ea2782ed77f8e\n",
-      "Signature = b519b79a5fd98a572587ea3ef56e5fdf163d37a2e87100c5ae3709dccf81c6c97d08a1b2598fdc5c0568f80e4764be96a123b79ad8bbc7904bfb23357f6e59e6\n"
+      "Aggregated key = 3dd9f89da17633fa5be72986a605afdc3477a2663bd0661198d59a93d0fb3f62\n",
+      "Signature = ca50387b9e098aac7f7396551091f834c0a0c760e40b5fcedb598a3de2fc4136e871d779bfc01300e8806f26779628070fccf65b23fd58595f7deb11f89d6d00\n"
      ]
     }
    ],
@@ -181,21 +199,12 @@
     "import os\n",
     "# from hashlib import sha256\n",
     "\n",
-    "def hashPDF(file, BLOCK_SIZE):\n",
-    "    # hash=sha256()\n",
-    "    with open(file, 'rb') as f: # Open the file to read it's bytes\n",
-    "        fb = f.read(BLOCK_SIZE) # Read from the file. Take in the amount declared above\n",
-    "        M = sl.sha256(fb)\n",
-    "    return M\n",
-    "\n",
     "n_keys = int(input(\"Insert the number of keys to be generated:\"))\n",
     "# n_keys = 2\n",
     "users = ckp.create_keypair(n_keys)[\"users\"]\n",
     "\n",
     "# M = input(\"Insert the message to sign:\")\n",
     "# M = sl.sha256(M.encode())\n",
-    "file = \"C:/Users/guzma/OneDrive/Documents/TEC/S6/MA2006/reto/test.pdf\"\n",
-    "size = os.path.getsize(file) \n",
     "M = hashPDF(file, size)\n",
     "\n",
     "sig, X = sl.schnorr_musig2_sign(M, users)\n",
