Cambio a prueba.py para que ahora ya funcione la verificacion de schnorr

--- a/schnorr-sig/schnorr.ipynb
+++ b/schnorr-sig/schnorr.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,15 +85,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PublicKey = 5cca9b527270eafd9309001c26acb24e9357bcb5df2f96960009b389606088e7\n",
-      "Signature = 186cbef55f772dd8192bf82e286dd8276c2e99b67dacb159ab0f10fbaa1072715092ecca345171bb8d664e75c5c4b59e1c2d0db3eba87a3022e83d6f74c2cc3a\n"
+      "PublicKey = <class 'str'>\n",
+      "Signature = 8b40d9d6c49df70d69e6588c189c3fdbbc78ae4d99069f5eec9fc850f3f357ffc4c5277d8ff768616e415257986fe5ab2e14995a38061a4bbce03908e16f3967\n"
      ]
     }
    ],
@@ -109,7 +109,7 @@
     "\n",
     "sig = sl.schnorr_sign(M, user[0][\"privateKey\"])\n",
     "\n",
-    "print(\"PublicKey =\",user[0][\"publicKey\"])\n",
+    "print(\"PublicKey =\", user[0][\"publicKey\"])\n",
     "print(\"Signature =\",sig.hex())"
    ]
   },
