--- a/schnorr-sig/verificacion.ipynb
+++ b/schnorr-sig/verificacion.ipynb
@@ -68,15 +68,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PublicKey = fb01010be2a1582481c5cc106a2b4c9154f9fdf7427e3e419e6e6f3c3536786b\n",
-      "Signature = 872865985b059602f1be06928e76e08349a126fbb13d11cd813c49c2416f5dc0e3f15d3a76f83bf133657d814af35caf13235a0a55dcae71a7ad4c8a197e9c55\n"
+      "PublicKey = 99e745bf433c9a86663c263d0c13a66f4b8f68470a5d48c84c04993e3c4ea112\n",
+      "Signature = 056c9b840c62a176fe0ce0f3d06654f0b4cc54ec74f8f36ac1b10be86a483dafdac565ae48692bb6bc4d6bc9f5d23f2c9d84ab21298aa36e32115b9c1ec8e21a\n",
+      "[0.0007944999961182475, 0.0006170999840833247, 0.0006546000076923519, 0.0006167000101413578, 0.0005612999957520515, 0.00042340002255514264, 0.0004335999838076532, 0.00045039999531582, 0.0004927999980282038, 0.00031430000672116876, 0.0005414000188466161, 0.0005265999934636056, 0.0004993999900761992, 0.0004200999974273145, 0.00042100000428035855, 0.0003836000105366111, 0.00038320000749081373, 0.0003809999907389283, 0.00038300000596791506, 0.00038240000139921904, 0.0003853000234812498, 0.0003816999960690737, 0.00038219999987632036, 0.0003803000145126134, 0.00038170002517290413, 0.000381199992261827, 0.00038109999150037766, 0.000381199992261827, 0.00042380002560094, 0.00037960000918246806, 0.0003806000167969614, 0.0003786000015679747, 0.00044589999015443027, 0.00040580000495538116, 0.00038660000427626073, 0.0003858999989461154, 0.00038339997990988195, 0.00038320000749081373, 0.0004222000134177506, 0.0003808000183198601, 0.0005472000048030168, 0.00045900000259280205, 0.0004326000052969903, 0.0004769999941345304, 0.0006489999941550195, 0.0006977999873925, 0.0008341999782714993, 0.0003859999997075647, 0.0004285000031813979, 0.0006386000022757798, 0.0006294999911915511, 0.0005579999997280538, 0.00047470000572502613, 0.0003884999896399677, 0.00038029998540878296, 0.00038309997762553394, 0.0003789000038523227, 0.0003786000015679747, 0.0003782999992836267, 0.00037689998862333596, 0.00037819999852217734, 0.0004144000122323632, 0.0003760000108741224, 0.0003782999992836267, 0.00037779999547638, 0.0003793999785557389, 0.000447900005383417, 0.00040580000495538116, 0.000384599989047274, 0.0003779000253416598, 0.0003782999992836267, 0.0003769999893847853, 0.00037480000173673034, 0.0003749000024981797, 0.00037319998955354095, 0.0003780000261031091, 0.00037769999471493065, 0.0005370999861042947, 0.00042460000258870423, 0.0005721999914385378, 0.0005597000126726925, 0.0006673999887425452, 0.0007981999951880425, 0.0007009000109974295, 0.000586000009207055, 0.0005621000018436462, 0.0005623000033665448, 0.0005740999768022448, 0.0005741999775636941, 0.0005735000013373792, 0.0005748999828938395, 0.0005870999884791672, 0.0005805999971926212, 0.0005756999889854342, 0.0006432000081986189, 0.000594300014199689, 0.0005883999983780086, 0.0005947000172454864, 0.0005867999861948192]\n"
      ]
     }
    ],
@@ -93,7 +94,17 @@
     "sig = sl.schnorr_sign(M, user[0][\"privateKey\"])\n",
     "\n",
     "print(\"PublicKey =\",user[0][\"publicKey\"])\n",
-    "print(\"Signature =\",sig.hex())"
+    "print(\"Signature =\", sig.hex())\n",
+    "\n",
+    "tiempos_firma = []\n",
+    "for i in range(1,100):\n",
+    "    t0 = time.perf_counter()\n",
+    "    M = hashPDF(file_path, size)\n",
+    "    t1 = time.perf_counter()\n",
+    "    total_2 = t1-t0\n",
+    "    tiempos_firma.append(total_2)\n",
+    "\n",
+    "print(tiempos_firma)\n"
    ]
   },
   {
@@ -105,15 +116,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Aggregated key = c4a3283f9ff4fb6e99cc1d5bd8d3a3182c6d469770bd18ca0f121746676e7060\n",
-      "Signature = 8bc2d009a333ed18556f2977147733fc22e787c2a17cd6fd8f9ef34d4dc110d6fb028e8bed889f4a0412a251c3cbbde7632e6a99a9c6f2e116fdcc5dedf5588b\n"
+     "ename": "ValueError",
+     "evalue": "not enough values to unpack (expected 3, got 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32md:\\Documentos\\Visual Studio\\reto-ma2006\\schnorr-sig\\verificacion.ipynb Cell 9'\u001b[0m in \u001b[0;36m<cell line: 11>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Documentos/Visual%20Studio/reto-ma2006/schnorr-sig/verificacion.ipynb#ch0000008?line=6'>7</a>\u001b[0m \u001b[39m# M = input(\"Insert the message to sign:\")\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Documentos/Visual%20Studio/reto-ma2006/schnorr-sig/verificacion.ipynb#ch0000008?line=7'>8</a>\u001b[0m \u001b[39m# M = sl.sha256(M.encode())\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Documentos/Visual%20Studio/reto-ma2006/schnorr-sig/verificacion.ipynb#ch0000008?line=8'>9</a>\u001b[0m M \u001b[39m=\u001b[39m hashPDF(file_path, size)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/Documentos/Visual%20Studio/reto-ma2006/schnorr-sig/verificacion.ipynb#ch0000008?line=10'>11</a>\u001b[0m sig, X, priv\u001b[39m=\u001b[39m sl\u001b[39m.\u001b[39mschnorr_musig_sign(M, users)\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Documentos/Visual%20Studio/reto-ma2006/schnorr-sig/verificacion.ipynb#ch0000008?line=12'>13</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mAggregated key =\u001b[39m\u001b[39m\"\u001b[39m,X\u001b[39m.\u001b[39mhex())\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Documentos/Visual%20Studio/reto-ma2006/schnorr-sig/verificacion.ipynb#ch0000008?line=13'>14</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mSignature =\u001b[39m\u001b[39m\"\u001b[39m,sig\u001b[39m.\u001b[39mhex())\n",
+      "\u001b[1;31mValueError\u001b[0m: not enough values to unpack (expected 3, got 2)"
      ]
     }
    ],
@@ -128,7 +142,7 @@
     "# M = sl.sha256(M.encode())\n",
     "M = hashPDF(file_path, size)\n",
     "\n",
-    "sig, X = sl.schnorr_musig_sign(M, users)\n",
+    "sig, X, priv= sl.schnorr_musig_sign(M, users)\n",
     "\n",
     "print(\"Aggregated key =\",X.hex())\n",
     "print(\"Signature =\",sig.hex())"
