Cambios en schnorr.ipynb para visualizar las claves privadas de cada usuario

--- a/schnorr-sig/schnorr.ipynb
+++ b/schnorr-sig/schnorr.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -50,13 +50,17 @@
     {
      "data": {
       "text/plain": [
-       "[{'privateKey': 'cb203c0a070b40dbbb57be96f96305ec177d2c6613769762307f80948e1b7a74',\n",
-       "  'publicKey': '019fbce66971c02530b7f1f84380c59ce375a57b6eaba9179be303cab6e95b9e'},\n",
-       " {'privateKey': '422a908896e3e1a14ae5aca1f0f44e3a9c5f2461ad1207512777caf73f1b8911',\n",
-       "  'publicKey': 'b490aa6768c98cc1cf891c716bb3573e7c971b987584a8a4958294d81c721b40'}]"
+       "[{'privateKey': '935f27a247767695e8752616fbbb9e5fbf0e3f95ee0047bff46b992d8e80f704',\n",
+       "  'publicKey': '2fdf0c853a621359c04c8198a95fa4ecd64a75c4e3e8803470f9509ab3e10854'},\n",
+       " {'privateKey': '8f6e4bc11d5b544a4164f5bedf5032e7bd35c254a039f4bad07778308f2f7a59',\n",
+       "  'publicKey': '91491f5dd4fb343d916751a2b2ba187f39354696ec404bdf37c27d8ed86159e6'},\n",
+       " {'privateKey': '03f1596dce3ac764a239c3c61f7a826ba81bedfac32c8609bc074f7770dabc44',\n",
+       "  'publicKey': 'b2d5f54f659e9fb412f390ae2053d02da28206a89669421af9e1128fc7f17f41'},\n",
+       " {'privateKey': '86ef423058a352a9fc6ac5733993ea6156f913443ce27062629318b97e150555',\n",
+       "  'publicKey': 'cab5acceb517069f1aa10a378449320e0ae207b2d2415464c63114bae0aeaabf'}]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -140,8 +144,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Aggregated key = c0a1249e920d8b2f51ade69acd3d862f4755bd20cc08f474274fad8cf55fdeea\n",
-      "Signature = d12daa5527ac9ee1735c72e419a5ffa6182c92ea2c8efe8ebd75c5df504093c4a1d21eb7a2d96e16bb043a2bb24e397f91fa5358169ce3e890f44e1907a67de1\n"
+      "Aggregated key = 5aad8fa640f0b93c24a2232093e4ad13a674c148fc5f0cdbf2ac2f380bed2d6d\n",
+      "Signature = d2a64582d99045f5af4c6c634b77b23bcc6725299f337502a8634e141cd71c49f814fef8874a11c8b2d338a9ed1f53225c3f9fee48c5e7ede3605cdc0d402a29\n",
+      "The private keys are: \n",
+      "--------------------------\n",
+      "f8dd1c00c8485a4805b41066171241f68b0fd71dda1bc91138c4ac58cca17dd2\n",
+      "5848a458ec4070aa64bda055211dc11843a93d1196792aca7c9a249e2fd623bb\n",
+      "7a56f693078308975ad30930f0d0b2af9f188c2bbe7d8f2f36023a5546a2b0f6\n"
      ]
     }
    ],
@@ -159,7 +168,13 @@
     "sig, X = sl.schnorr_musig_sign(M, users)\n",
     "\n",
     "print(\"Aggregated key =\",X.hex())\n",
-    "print(\"Signature =\",sig.hex())"
+    "print(\"Signature =\",sig.hex())\n",
+    "\n",
+    "print('The private keys are: ')\n",
+    "print('--------------------------')\n",
+    "for u in users:\n",
+    "    pk = u['privateKey']\n",
+    "    print(pk)"
    ]
   },
   {
@@ -226,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
