Cambios en la funcion schnorr_musig_test

--- a/schnorr-sig/schnorr.ipynb
+++ b/schnorr-sig/schnorr.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -144,13 +144,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Aggregated key = 5aad8fa640f0b93c24a2232093e4ad13a674c148fc5f0cdbf2ac2f380bed2d6d\n",
-      "Signature = d2a64582d99045f5af4c6c634b77b23bcc6725299f337502a8634e141cd71c49f814fef8874a11c8b2d338a9ed1f53225c3f9fee48c5e7ede3605cdc0d402a29\n",
+      "Aggregated key = 4140d0945e44d868cf7cf9672e9cae520a76ed358353027d9958a35cfd4cbba1\n",
+      "Signature = bea8050a9f25ee9e59009b009382b714fac1da6d2c2066d393d3672d9a88a0e3a08e3940be3efe44a4d0d51037a3b036cb8312f7872f73e694be96562d5a14e8\n",
       "The private keys are: \n",
       "--------------------------\n",
-      "f8dd1c00c8485a4805b41066171241f68b0fd71dda1bc91138c4ac58cca17dd2\n",
-      "5848a458ec4070aa64bda055211dc11843a93d1196792aca7c9a249e2fd623bb\n",
-      "7a56f693078308975ad30930f0d0b2af9f188c2bbe7d8f2f36023a5546a2b0f6\n"
+      "Usuario 0: 87ee81ea34ff3a0aa55327350d03ff0b712a824e81b9de4ce17593f0c21a2d45\n",
+      "Usuario 1: 26de68a6c61359cdec3f814e5b5afb31bf26f9655c1725c9a000aa238f7a1b4f\n"
      ]
     }
    ],
@@ -174,7 +173,42 @@
     "print('--------------------------')\n",
     "for u in users:\n",
     "    pk = u['privateKey']\n",
-    "    print(pk)"
+    "    print('Usuario ' + u['nameUser'] + ':', pk)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "The created signature does not pass verification.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\guzma\\OneDrive\\Documents\\TEC\\S6\\MA2006\\reto\\schnorr-sig\\schnorr.ipynb Cell 9'\u001b[0m in \u001b[0;36m<cell line: 11>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/guzma/OneDrive/Documents/TEC/S6/MA2006/reto/schnorr-sig/schnorr.ipynb#ch0000008?line=6'>7</a>\u001b[0m \u001b[39m# M = input(\"Insert the message to sign:\")\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/guzma/OneDrive/Documents/TEC/S6/MA2006/reto/schnorr-sig/schnorr.ipynb#ch0000008?line=7'>8</a>\u001b[0m \u001b[39m# M = sl.sha256(M.encode())\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/guzma/OneDrive/Documents/TEC/S6/MA2006/reto/schnorr-sig/schnorr.ipynb#ch0000008?line=8'>9</a>\u001b[0m M \u001b[39m=\u001b[39m hashPDF(file, size)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/guzma/OneDrive/Documents/TEC/S6/MA2006/reto/schnorr-sig/schnorr.ipynb#ch0000008?line=10'>11</a>\u001b[0m sig, X \u001b[39m=\u001b[39m sl\u001b[39m.\u001b[39;49mschnorr_musig_sign_test(M, users)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/guzma/OneDrive/Documents/TEC/S6/MA2006/reto/schnorr-sig/schnorr.ipynb#ch0000008?line=12'>13</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mAggregated key =\u001b[39m\u001b[39m\"\u001b[39m,X\u001b[39m.\u001b[39mhex())\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/guzma/OneDrive/Documents/TEC/S6/MA2006/reto/schnorr-sig/schnorr.ipynb#ch0000008?line=13'>14</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mSignature =\u001b[39m\u001b[39m\"\u001b[39m,sig\u001b[39m.\u001b[39mhex())\n",
+      "File \u001b[1;32mc:\\Users\\guzma\\OneDrive\\Documents\\TEC\\S6\\MA2006\\reto\\schnorr-sig\\schnorr_lib.py:501\u001b[0m, in \u001b[0;36mschnorr_musig_sign_test\u001b[1;34m(msg, users)\u001b[0m\n\u001b[0;32m    <a href='file:///c%3A/Users/guzma/OneDrive/Documents/TEC/S6/MA2006/reto/schnorr-sig/schnorr_lib.py?line=497'>498</a>\u001b[0m signature_bytes \u001b[39m=\u001b[39m bytes_from_point(Rsum) \u001b[39m+\u001b[39m bytes_from_int(sSum)\n\u001b[0;32m    <a href='file:///c%3A/Users/guzma/OneDrive/Documents/TEC/S6/MA2006/reto/schnorr-sig/schnorr_lib.py?line=499'>500</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m schnorr_verify(msg, bytes_from_point(X), signature_bytes):\n\u001b[1;32m--> <a href='file:///c%3A/Users/guzma/OneDrive/Documents/TEC/S6/MA2006/reto/schnorr-sig/schnorr_lib.py?line=500'>501</a>\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mRuntimeError\u001b[39;00m(\u001b[39m'\u001b[39m\u001b[39mThe created signature does not pass verification.\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m    <a href='file:///c%3A/Users/guzma/OneDrive/Documents/TEC/S6/MA2006/reto/schnorr-sig/schnorr_lib.py?line=501'>502</a>\u001b[0m \u001b[39mreturn\u001b[39;00m signature_bytes, bytes_from_point(X)\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: The created signature does not pass verification."
+     ]
+    }
+   ],
+   "source": [
+    "import create_keypair as ckp\n",
+    "import schnorr_lib as sl\n",
+    "\n",
+    "n_keys = int(input(\"Insert the number of keys to be generated:\"))\n",
+    "users = ckp.create_keypair(n_keys)[\"users\"]\n",
+    "\n",
+    "# M = input(\"Insert the message to sign:\")\n",
+    "# M = sl.sha256(M.encode())\n",
+    "M = hashPDF(file, size)\n",
+    "\n",
+    "sig, X = sl.schnorr_musig_sign_test(M, users)\n",
+    "\n",
+    "print(\"Aggregated key =\",X.hex())\n",
+    "print(\"Signature =\",sig.hex())"
    ]
   },
   {
