Cambio incompleto a multiusuario

--- a/schnorr-sig/verificacion.ipynb
+++ b/schnorr-sig/verificacion.ipynb
@@ -351,6 +351,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "010e8a417c4a0f13a603a4566bb23678a8a896f1b9fafb4ac6d35bf0de081b26\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "with open('users.json', 'r') as f:\n",
+    "            data = json.load(f)\n",
+    "\n",
+    "dict = data['users'][0]['privateKey']\n",
+    "print(dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
