--- a/schnorr-sig/verificacion.ipynb
+++ b/schnorr-sig/verificacion.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
     "from tkinter import filedialog\n",
     "root = tk.Tk()\n",
     "root.withdraw()\n",
-    "file_path = filedialog.askopenfilename()\n",
+    "file_path = 'D:/Documentos/pdf-test.pdf'\n",
     "print(file_path)"
    ]
   },
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,15 +148,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Aggregated key = ada347b0f7df08a9f452839fbeed8f46ed294ceb7105f61ae7b9abfd28e758b1\n",
-      "Signature = 32054b80f10e640f5caab6d73de3334dd039db26c0604a8e22534c4ed6b62c3704dc8a7397a5a26dcc323d095776e13fefe95574da5912a4956139721fb52414\n"
+      "77\n",
+      "77\n",
+      "64\n",
+      "32\n",
+      "Aggregated key = 64\n",
+      "Signature = 128\n"
      ]
     }
    ],
@@ -171,10 +175,54 @@
     "# M = sl.sha256(M.encode())\n",
     "M = hashPDF(file_path, size)\n",
     "\n",
-    "sig, X= sl.schnorr_musig_sign(M, users)\n",
+    "sig, X, priv= sl.schnorr_musig_sign(M, users)\n",
+    "print(len(sig))\n",
+    "print(len(X))\n",
     "\n",
-    "print(\"Aggregated key =\",X.hex())\n",
-    "print(\"Signature =\",sig.hex())"
+    "print(\"Aggregated key =\",len(X.hex()))\n",
+    "print(\"Signature =\",len(sig.hex()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "128"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = 'd66630062412391bf8f581a35c0dcb8746372fff045ad152458012601bf3163f17e56ac29f027958b336a9df168118b59e5b06cd936af44e0f6e40aeffe29c30'\n",
+    "len(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = '9a722933fa4788f92e21ba2e848a347d939bfb012ec81a004b70fb8fa064641c'\n",
+    "len(p)"
    ]
   },
   {
